Update contact form

--- a/public/__forms.html
+++ b/public/__forms.html
@@ -2,7 +2,7 @@
   <head></head>
   <body>
     <form name="contact" data-netlify="true" hidden>
-      <input type="hidden" name="contact" value="contact" />
+      <input type="hidden" name="contact-form" value="contact" />
       <input name="fullName" type="text" />
       <input name="email" type="email" />
       <input name="phone" type="tel" />
