Update tv mounting information page

--- a/public/__forms.html
+++ b/public/__forms.html
@@ -45,9 +45,9 @@
       <select name="liftHelp">
         <option value="">Lift Help</option>
       </select>
-      <input type="checkbox" name="inWallCordMasking" />
-      <input type="checkbox" name="externalCustomerCordMasking" />
-      <input type="checkbox" name="externalTechCordMasking" />
+      <input type="radio" name="addOn" value="" />
+      <input type="radio" name="addOn" value="inWall" />
+      <input type="radio" name="addOn" value="externalMasking" />
     </form>
   </body>
 </html>
